<resources>
    <string name="app_name">Simple Notes</string>
    <string name="action_settings">Settings</string>

    <string name="add_icon_title">Add</string>
    <string name="search_icon_title">Search</string>
    <string name="edit_icon_title">Edit</string>
    <string name="delete_icon_title">Delete</string>
    <string name="tick_icon_title">Save</string>
    <string name="favourite_icon_title">Favourite</string>
    <string name="creation_date_icon_title">Creation Date</string>
    <string name="filter_favourites_icon_title">Filter By Favourites</string>
    <string name="show_all_icon_title">Show All</string>

    <string name="title_activity_new_note">NewNoteActivity</string>

    <string name="title">Title</string>
    <string name="enter_note">Enter note here</string>
    <string name="title_activity_note_viewer">NoteViewerActivity</string>

    <string name="date_created_dialog_title">Date Created</string>
    <string name="date_change_dialog_message">Change the creation date to today?</string>
    <string name="blank_main_text_dialog_message">
        Add some text to the body of your note before saving
    </string>
    <string name="title_override_warning">
        Remove current title and replace it with a generated one?
    </string>


    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
