<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alequinonboard.simplenotes.NotesMainActivity">

    <item
        android:id="@id/edit_icon_viewer_activity"
        android:icon="@drawable/edit_icon"
        android:title="@string/favourite_icon_title"
        app:showAsAction="always"/>

    <item
        android:id="@id/delete_icon_viewer_activity"
        android:icon="@drawable/delete_icon"
        android:title="@string/search_icon_title"
        app:showAsAction="always"/>

    <item
        android:id="@id/date_created_viewer_activity"
        android:title="@string/creation_date_icon_title"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>